--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,22 @@
   "description": "Client side for Zenva MMorpg Game",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx webpack --mode production",
+    "start": "npm run build && npx webpack serve --port=8000 --mode development"
   },
   "author": "Michael Ahlers",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "babel-loader": "^8.2.1",
+    "raw-loader": "^4.0.2",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.7.1"
+  },
+  "dependencies": {
+    "phaser": "^3.24.1"
   }
 }
