--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx webpack --mode production",
-    "start": "npm run build && npx webpack serve --port=8000 --mode development"
+    "start": "npm run build && npx webpack serve --port=8000 --mode development --env development --hot"
   },
   "author": "Michael Ahlers",
   "license": "ISC",
