--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "webpack-dev-server": "^3.7.1"
   },
   "dependencies": {
-    "phaser": "^3.24.1"
+    "phaser": "^3.24.1",
+    "uuid": "^8.3.1"
   }
 }
