--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-SERVER_URL="http://localhost:3000"
-SERVER_URL2="http://ec2-54-234-225-31.compute-1.amazonaws.com:3000"
+SERVER_URL2="http://localhost:3000"
+SERVER_URL="http://ec2-54-234-225-31.compute-1.amazonaws.com:3000"
