Update Inventory Window

--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "nodemon": "npx nodemon index.js --exec babel-node",
+    "nodemon": "npx nodemon ./src/index.js --exec babel-node",
     "lint": "npx eslint ./ --fix",
     "clean": "rm -rf build && mkdir build",
     "build": "babel -d ./build ./src -s",
