--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
-SERVER_URL2="http://localhost:3000"
-SERVER_URL="https://rpg-express-server.herokuapp.com"
+SERVER_URL="http://localhost:3000"
+SERVER_URL2="https://rpg-express-server.herokuapp.com"
 TOKEN_INTERVAL="3000"
