--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,4 @@
 SERVER_URL1="http://localhost:3000"
 SERVER_URL="https://rpg-express-server.herokuapp.com"
 TOKEN_INTERVAL="3000"
-BYPASS_AUTH="ENABLED"
+BYPASS_AUTH="DISENABLED"
